<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.udacity.shoestore.LoginFragment">

<data>

    <variable
        name="shoeViewModel"
        type="com.udacity.shoestore.ShoeStoreViewModel" />
</data>
<!-- ConstraintLayout is used here as there a bunch of text views and buttons that are to be placed relative to each other -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contsraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@+id/password_text"
            app:layout_constraintTop_toTopOf="@+id/password_text" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/password_edit"
            app:layout_constraintStart_toEndOf="@+id/email_text"
            app:layout_constraintTop_toTopOf="@+id/email_text" />

        <Button
            android:id="@+id/newlogin_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/newlogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <Button
            android:id="@+id/existing_login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/loginExistingAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newlogin_button"
            app:layout_constraintVertical_bias="0.107" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>